<resources>
    <string name="app_name">My Cart</string>
    <string name="search">search</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="number">1</string>
    <string name="sum_price">Sum price</string>
    <string name="total_text">Total</string>
    <string name="total_price">Total price</string>
    <string name="checkout">Checkout</string>
</resources>