<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:background="@drawable/product_background">

        <ImageView
            android:id="@+id/iv_cartThumbnail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_launcher_foreground"
            android:layout_margin="2dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="8dp"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/tv_cartName"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:gravity="top"
                android:ellipsize="end"
                android:maxLines="2"/>

            <TextView
                android:id="@+id/tv_cartUnitPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/gold"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                android:gravity="bottom"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="24dp">

            <ImageButton
                android:id="@+id/btn_increaseItem"
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:background="@drawable/add_remove_btn_background"
                android:src="@drawable/baseline_add_24"
                android:layout_marginTop="2dp"/>

            <TextView
                android:id="@+id/tv_quantity"
                android:layout_width="28dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/number"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="end|center_vertical"/>

            <ImageButton
                android:id="@+id/btn_decreaseItem"
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:background="@drawable/add_remove_btn_background"
                android:src="@drawable/baseline_remove_24"
                android:layout_marginBottom="2dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_sumPrice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sum_price"
            android:textColor="@color/gold"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:paddingEnd="4dp"
            android:gravity="center_vertical"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>